--- a/Lab1/layout.css
+++ b/Lab1/layout.css
@@ -7,9 +7,49 @@
         width:100%
         font-family: Arial,sans-serif;
     }
-    header, nav, article, div, footer {
+    header{
+        width: 100%;
         padding: 10px;
         background-color : yellow ;
         border:1px solid gray;
         text-align: center;
+    }
+    nav{
+        width: 20%;
+        height: 200px;
+        padding: 20px;
+        background-color : yellow ;
+        border:1px solid gray;
+        text-align: left;
+        float: left;
+    }
+    article{
+        width: 60%;
+        height: 200px;
+        padding: 10px;
+        background-color : yellow ;
+        border:1px solid gray;
+        text-align: center;
+        float: left;
+    }
+    div{
+        width: 20%;
+        height: 200px;
+        padding: 10px;
+        background-color : yellow ;
+        border:1px solid gray;
+        text-align: center;
+        float: left;
+    }
+    footer{
+        width: 100%;
+        padding: 10px;
+        background-color : yellow ;
+        border:1px solid gray;
+        text-align: center;
+    }
+    nav ul {
+        padding: 0; /* ลบระยะห่างภายใน */
+        margin: 0; /* ลบระยะห่างภายนอก */
+        list-style-type: none; /* ลบจุดหรือหมายเลข */
     }
