--- a/Lab2/styles.css
+++ b/Lab2/styles.css
@@ -27,8 +27,13 @@ header p {
 /* Navigation Styles */
 nav {
     background-color: #ffa41b;
-    padding: 15px;
+    padding-top: 15px;
     text-align: center;
+    float: left;
+    width: 20%;
+    height: 50vh;
+    position: sticky;
+    top: 10px;
 }
 
 nav ul {
@@ -38,8 +43,10 @@ nav ul {
 }
 
 nav ul li {
-    display: inline-block;
-    margin: 0 15px;
+    /*display: inline-block;
+    margin: 0 15px;*/
+    display: block;
+    margin: 15px;
 }
 
 nav ul li a {
@@ -55,7 +62,9 @@ nav ul li a:hover {
 
 /* Main Content Styles */
 main {
-    padding: 20px;
+    padding: 15px;
+    float: right;
+    width: 75%;
 }
 
 /* Info Section Styles */
@@ -138,6 +147,7 @@ footer {
     background-color: #ffe066;
     padding: 10px;
     text-align: center;
+    clear: both;
 }
 
 footer p {
